Makign footer stick to bottom.

--- a/core/templates/about.html
+++ b/core/templates/about.html
@@ -11,7 +11,7 @@
 
 {% block site-content %}
 <div class="person">
-<div class="photo">Photo</div>
+<div class="photo"></div>
 <div class="content">Mike Preshman: mike@ripplefunction.com</div>
 </div>
 
