--- a/core/templates/contact.html
+++ b/core/templates/contact.html
@@ -12,16 +12,9 @@
 {% block site-content %}
 
 <div class="person">
-<div class="photo">Photo</div>
+<div class="photo"></div>
 <div class="content">Mike Preshman: mike@ripplefunction.com</div>
 </div>
-<!--
-<div class="person">
-<div class="photo">Photo</div>
-<div class="content">Mike Preshman - CTO</div>
-</div>
-</div>
--->
 
 
 <div style="margin: 100px 0px 0px 100px; width: 90%;">
