--- a/core/templates/footer.html
+++ b/core/templates/footer.html
@@ -1,7 +1,8 @@
 <!-- END main -->
+
 <div id="footer">
   <div id="footer-container">
-		<div id="dets" style="margin-right: 60px;">
+		<div id="dets">
 			<a href="{%url about%}">About</a> &nbsp; 
 			<a href="#">Privacy Policy</a>
 		</div>
@@ -10,4 +11,5 @@
                </div>
    </div>
 </div>
+
 <!-- END footer -->
