--- a/static/css/about.css
+++ b/static/css/about.css
@@ -21,15 +21,15 @@ float: left;
 margin: 10px;
 width: 10%;
 height: 80px;
-background-color: yellow;;
+background-color: white;;
 text-align: center;
 }
 
 div.content {
-padding: 2px 1% 2px 1%;
+padding: 30px 1% 2px 1%;
 float: right;
 margin: 10px;
 width: 78%;
-height: 76px;
+font-size: 25px;
 background-color: white;
 }
