--- a/core/templates/footer.html
+++ b/core/templates/footer.html
@@ -3,8 +3,11 @@
 <div id="footer">
   <div id="footer-container">
 		<div id="dets">
-			<a href="{%url about%}">About</a> &nbsp; 
-			<a href="#">Privacy Policy</a>
+			<a href="{%url about%}">About</a> &nbsp; <br/>
+			<a href="{%url contact %}">Contact</a><br/>
+			<a href="{%url howitworks %}">How it works</a><br/>
+			<a href="#">Terms of Service</a>
+
 		</div>
                <div id="copyright">
 	           Copyright RippleFunction 2010
