--- a/static/css/about.css
+++ b/static/css/about.css
@@ -8,11 +8,11 @@ div#parent-about {
 
 div.person {
 background-color: white;
-border: 1px solid gray;
 width: 80%;
 height: 100px;
 margin: auto;
 margin-top: 30px;
+background-color: #f8f6f6;
 }
 
 
@@ -21,7 +21,7 @@ float: left;
 margin: 10px;
 width: 10%;
 height: 80px;
-background-color: white;;
+
 text-align: center;
 }
 
@@ -31,5 +31,5 @@ float: right;
 margin: 10px;
 width: 78%;
 font-size: 25px;
-background-color: white;
+
 }
