--- a/static/css/analytics/content.css
+++ b/static/css/analytics/content.css
@@ -5,23 +5,33 @@
 	font-size:24px;
 	font-weight:normal;
 	margin-bottom: 10px;
+	width: 33%;
 }
 /* div that contains the impression, breakdown, and pie charts */
 #top {
 	margin: 0 10px 0 10px;
+	width: 100%;
+}
+#topSum {
+	width: 66%;
 }
 /* Panel to select Campaign and Date */
 #panelNav {
-	padding-top: 10px;
+	margin-top: 20px;
+	margin-bottom: 60px;
+	width: 100%;
+	background-color: red;
 }
 /* div to select Campaign, div to select date */
+#selectDiv {float: left;}
+#dateDiv {float: right;}
 #selectDiv, #dateDiv{
 	padding: 0px 0px 0px 0px;
 	font-size: 16px;
 	font-weight:normal;
 }
 #selectCampaign, #selectDate {
-	padding: 5px 5px 5px 5px;
+	#padding: 50px 5px 5px 5px;
 	border: 1px solid #ccc;
 }
 /* div for impressions chart, breakdown chart */
@@ -30,7 +40,26 @@
 	border: solid 1px #ccc;
 	-moz-border-radius: 4px;
 	-webkit-border-radius: 4px;
+	width: 100%;
 }
+#topPic {
+height: 210px;
+}
+
+#botPic {
+height: 250px;
+}
+
+#botLeftPic {
+float: left;
+width: 70%;
+}
+
+#botRightPic {
+float: right;
+width: 29%;
+}
+
 
 #date_column_chart{
 /*	padding-right: 65px;
@@ -67,13 +96,42 @@ table.google-visualization-table-table * {padding: 0px;}
 	border: solid 1px #ccc;
 	-moz-border-radius: 4px;
 	-webkit-border-radius: 4px;
+	width: 100%;
+	height: 600px;
 }
-#midLeft, #midRight {
+
+#influenceTitle {
+		 font-weight: bold;
+		 font-size: 20px;
+}
+
+#tableHeader {
+		 font-weight: bold;
+		 font-size: 15px;
+}
+
+#midLeft {
 	margin: 10px;
+	width: 50%;
+	float: left;
 }
+#midRight {
+	margin: 10px;
+	width: 40%;
+	float: right;
+        
+        background-color: #fff;
+	border: 1px solid #ccc;
+	padding: 10px;
+	margin: 20px 20px 20px 0px;
+	height: 500px;
+}
+
 #tableHeader {
 	font-size: 14px;
 	padding-left: 45px;	
+	width: 40%;
+	
 }
 /*
 tr.headerRow {}
@@ -136,13 +194,6 @@ tr.oddTableRow {}
 	border-left: 5px solid #F2F0F0;
 }
 /* Influencer Profile */
-#midRight{
-	background-color: #fff;
-	border: 1px solid #ccc;
-	padding: 10px;
-	margin: 20px 20px 20px 0px;
-	height: 500px;
-}
 .tFollowers{
 	height: 10px;
 	padding-left: 10px;
@@ -163,7 +214,11 @@ tr.oddTableRow {}
         font-size: 14px;
 	font-weight: bold;
 	padding: 10px;
+	width: 100%;
 }
 
+#stats p{
+       padding: 10px;
+}
 
 
