--- a/static/css/howitworks.css
+++ b/static/css/howitworks.css
@@ -1,10 +1,34 @@
 .description {
-	     margin-top: 10%;
+	     padding: 50px;
 	     text-align: center;
 	     font-size: 20px;
+    -moz-border-radius-topleft: 20px;
+    -webkit-border-top-left-radius: 20px;
+    -moz-border-radius-topright: 20px;
+    -webkit-border-top-right-radius: 20px;
+
+    -moz-border-radius-bottomleft: 20px;
+    -webkit-border-bottom-left-radius: 20px;
+    -moz-border-radius-bottomright: 20px;
+    -webkit-border-bottom-right-radius: 20px;
+    
+    border: 2px solid #CCC;
+    -moz-box-shadow: 10px 10px 10px #999;
+   -webkit-box-shadow: 10px 10px 10px #999;		
+}
+
+
+.description p {
+	     margin: 20px 0 20px 0;
+	     padding: 30px;
+	     background-color: #f8f6f6;
 }
 
 .description h1 {
 	     color: red;
 	     margin-bottom: 10%;
+}
+
+.description img {
+	     padding: 10px;
 }
