Fixing up some more things with footer and header.

--- a/static/css/howitworks.css
+++ b/static/css/howitworks.css
@@ -15,6 +15,8 @@
     border: 2px solid #CCC;
     -moz-box-shadow: 10px 10px 10px #999;
    -webkit-box-shadow: 10px 10px 10px #999;		
+   margin-bottom: 30px;
+   margin-top: 20px;
 }
 
 
