--- a/core/templates/howitworks.html
+++ b/core/templates/howitworks.html
@@ -11,7 +11,7 @@
 
 {% block site-content %}
 <div class="description">
-<h1>Convert Event Attendees into Evangelists. </h1>
+<h1>Convert Event Attendees into Evangelists </h1>
 <p>
 RippleFunction Creates, Manages, and Tracks event promotions by<br/>
 Rewarding Tweets and Shares with <br />
@@ -21,14 +21,15 @@ Discounts, Raffle entries, VIP status at events, and other incentives.
 
 
 <p>
-RippleFunction provides custom looking widgets that you can embed onto your site<br/>
-and still have all of the functionality to incentivise your attendees to promote your event.
+RippleFunction provides custom looking widgets that you can embed into your site<br/>
+and have all of the functionality right on your website.<br/>
+Track users shares, and reward them for promoting your events.
 <img src="{%url static 'images/widget.png'%}" />
 </p>
 
 <p>
 RippleFunction provides analytics to track every step of the promotion.<br/>
-Top influencers. Top reach. Who clicked. Who baught. And more.
+Top influencers. Top reach. Who clicked. Who is going. And much more.
 <img src="{%url static 'images/analytics.png'%}" />
 </p>
 
