--- a/core/templates/campaign_edit.html
+++ b/core/templates/campaign_edit.html
@@ -47,11 +47,26 @@
 			</li>
 			<li id="li-discount-code">
 				<label for="code">Discount Code: 
-				</label> <input type="text" value="{{campaign.code}}" name="code" class="required" />
+				</label> <input type="text" value="{{campaign.code}}" name="code" class="required" id="discount_code"/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 				<label for="percent">Percent Discount: 
-				</label> <input type="text" value="{{campaign.percent}}" size="5" name="percent" class="required digits"/>
+				</label> <input type="text" value="{{campaign.percent}}" size="5" name="percent" class="required digits" id="discount_percent"/>
+				<div id="discount-code-msg"><br/>To create new discount code <button id="create_discount" type="button">Click Here</button> </div>
+			
+                                <div id="discount-code-create">
+                                <br/><br/>
+				<label for="eventid">Event ID: 
+				</label> <input type="text" value="" size="10" name="eventid" id="eventid" />
+                        &nbsp;&nbsp;
+				<label for="username">Username: 
+				</label> <input type="text" value="" size="12" name="username" id="pos_username" />
+			&nbsp;&nbsp;
+				<label for="password">Password: 
+				</label> <input type="password" value="" size="12" name="password" id="pos_password"/>
+				<br/><br/><button type="button" id="submit_discount">Submit Discount Code</button>
+				</div>
 			</li>
+
 			<li id="li-dates-start">
 				<label for="promotion_date_start">Promotion Start Date: </label> 
 				<input type="text" name="promotion_date_start" size="12" id="promotion_date_start" value="{{start_date_label}}" class="required" />
@@ -78,20 +93,20 @@
 			</li>
 
 			<li>
-				<label for="campaign_message">Message Displayed Front Label: </label> 
-				<textarea rows="6" cols="40"  name="campaign_message">{{campaign.message}}</textarea>
+				<label for="campaign_message">Landing Page Subtitle Text: </label> &nbsp;&nbsp;&nbsp;
+				<textarea rows="1" cols="40"  name="campaign_message">{{campaign.message}}</textarea>
 			</li>
 
 			 <li>
-				<label for="campaign_message_share">Message Displayed During Share: </label> 
-				<textarea rows="6" cols="40"  name="campaign_message_share">{{campaign.message_share}}</textarea>
+				<label for="campaign_message_share">Share Text: </label> &nbsp;&nbsp;&nbsp;
+				<textarea rows="2" cols="40"  name="campaign_message_share">{{campaign.message_share}}</textarea>
 			</li>
 			 <li>
-				<label for="url">URL to be shown on landing page: </label> 
+				<label for="url">URL to be shown on landing page (page with all the event detail information): </label> 
 				<input type="text" value="{{campaign.url}}" size="60" name="url" />
 			</li>
 			<li id="li-discount-url">
-				<label for="url_redeem">redeem discount URL: </label> 
+				<label for="url_redeem">Redeem discount URL (url user should go to, after share, inorder to register): </label> 
 				<input type="text" value="{{campaign.url_redeem}}" size="60" name="url_redeem" />
 			</li>
 			<li id="li-twitter-fan">
@@ -284,6 +299,34 @@ if ('{{campaign.campaign_type}}' == 'raffle'){
 	});
 
 
+       $('#create_discount').click(function() {
+           $('#discount-code-msg').hide();	    
+           $('#discount-code-create').show();	    
+
+       });
+
+       $('#discount-code-create').hide();	    
+
+       $('#submit_discount').click(function(){
+             $.ajax({
+			url: '{% url ajax_eventbrite_create_discount %}', 
+			dataType: "json",
+			type: "POST",
+			data: {username : $('#pos_username').val(),
+	                       password : $('#pos_password').val(),
+                               code : $('#discount_code').val(),
+                               percent: $('#discount_percent').val(),
+                               eventid: $('#eventid').val()}, 
+		   success: function(data){
+                       alert("hi after");
+	               $('#discount-code-create').hide();
+                       $('#discount-code-msg').show();	    
+                  },
+		  beforeSend: function() {
+	               
+		   }
+	      });  
+       });
 
 </script>
 
