Fixing up some things.

--- a/core/templates/footer.html
+++ b/core/templates/footer.html
@@ -6,6 +6,7 @@
 			<a href="{%url about%}">About</a> &nbsp; <br/>
 			<a href="{%url contact %}">Contact</a><br/>
 			<a href="{%url howitworks %}">How it works</a><br/>
+                        <a href="{%url jobs %}">Jobs</a><br/>
 			<a href="#">Terms of Service</a>
 
 		</div>
