--- a/core/templates/header.html
+++ b/core/templates/header.html
@@ -4,7 +4,8 @@
 	  	<div id="links">
             <a href="{% url create_campaign %}" style="font-size:20px;">Try It Now</a> &nbsp;&nbsp; 
 	    	<a href="{% url howitworks %}">How it Works</a> &nbsp;&nbsp; 
-	    	<a href="{% url contact %}">Contact</a>
+	    	<a href="{% url contact %}">Contact</a>&nbsp;&nbsp; 
+		<a href="{% url jobs %}">Jobs</a>
 	  	</div>
 	</div>
     </div>
