--- a/static/css/top-site-base.css
+++ b/static/css/top-site-base.css
@@ -47,7 +47,7 @@ body{
 
 #header-container{
         position: relative;	
-	width: 980px;
+	width: 55%;
 	margin: auto;
 	padding-bottom: 10px;
 }
@@ -55,7 +55,7 @@ body{
 #header #links
 {
 	float: right;
-	width: 300px;
+	#width: 300px;
 	text-align: right;
 	padding: 12px 40px 0px 12px;
 	top: 12px;
