Fixing up some things.

--- a/core/templates/campaign_widget.html
+++ b/core/templates/campaign_widget.html
@@ -53,7 +53,7 @@
         </div>
 
         <div style="float:left; margin-left: 75px;">
-        <label for="widget-background-color-platform">Color Platform:&nbsp;&nbsp; </label>
+        <label for="widget-background-color-platform">Color Background:&nbsp;&nbsp; </label>
         <input type="color" value="{{platformcolor}}" size="8" name="widget-background-color-platform" id="widget-background-color-platform"/>
         <button id="hide-color-platform" style="display:none;">Hide</button>
         <div id="picker-platform" style="display:none;text-alighn: center; padding-left: 50px;"></div>
