--- a/core/templates/campaign_widget.html
+++ b/core/templates/campaign_widget.html
@@ -109,7 +109,7 @@ $("#getcode").click(function(){
 
 $("#widget-message").val('{% autoescape off %}{{html}}{% endautoescape %}');
 {% else %}
-$("#widget-message").val('<font size="5">{{campaign.title}}</font><br/><br/><font size="3">{{campaign.message}}</font><br/><br/><font color="#ff0000"><font size="4">JUST BY <b>Sharing</b> with friends:</font></font>');
+$("#widget-message").val('<br/><div align="center"><font size="5">{{campaign.title}}</font><br/><br/><font size="3">{{campaign.message}}</font><br/><br/><font color="#ff0000"><font size="4">JUST BY <b>Sharing</b> with friends:</font></font></div>');
 {% endif %}
 
 
@@ -121,7 +121,8 @@ $("#widget-message").cleditor({height: 240,
                                sizes:        // sizes in the font size popup
                                      "1,2,3,4,5,6,7",
                                controls:     // controls to add to the toolbar
-                                     "bold italic underline strikethrough | font size style | color highlight removeformat | rule image link | html",
+                                     "bold italic underline strikethrough | font size style | color highlight removeformat | bullets numbering | outdent " +
+                        "indent | alignleft center alignright justify | undo redo | rule image link | html",
                                colors:       // colors in the color popup
                         "FFF FCC FC9 FF9 FFC 9F9 9FF CFF CCF FCF " +
                         "CCC F66 F96 FF6 FF3 6F9 3FF 6FF 99F F9F " +
