--- a/static/css/cross-site-badge.css
+++ b/static/css/cross-site-badge.css
@@ -66,6 +66,7 @@ div#badge-header {
    left: 0px;
    -webkit-border-radius: 10px 10px 10px 10px;
    -moz-border-radius: 10px 10px 10px 10px;
+   text-align: center;
 }
 
 div#facebook-login-share {
@@ -93,11 +94,10 @@ div#ripple-badge {
 	-webkit-border-radius: 10px 10px 10px 10px;
 	-webkit-box-shadow: 3px 3px 10px #000000;
 		
-	text-align: center;
 	font-size: 16px;
 	font-weight: bold;
 
-
+	text-align: left;
 	background-color: #F2F2F2;
         border: 1px solid gray;
 
