--- a/frontpage/templates/frontpage.html
+++ b/frontpage/templates/frontpage.html
@@ -14,6 +14,12 @@
 <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="545" height="383" id="viddler_251a4028"><param name="movie" value="http://www.viddler.com/player/251a4028/" /><param name="allowScriptAccess" value="always" /><param name="allowFullScreen" value="true" /><embed src="http://www.viddler.com/player/251a4028/" width="545" height="383" type="application/x-shockwave-flash" allowScriptAccess="always" allowFullScreen="true" name="viddler_251a4028"></embed></object>
 </div>
 
+
+<div id="ripple-widget-sample">
+<br/><br/><h1>Ripple Function In Action, Try Widget Below, and see how it works!</h1><br/>
+<div id='ripple-embed'>86</div><script type='text/javascript' src='http://www.ripplefunction.com/site_media/javascript/embed-iframe.js' ></script>
+</div>
+
 <!--<div id="social-plugin">
 <iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2Fpages%2FRippleFunction%2F155806427771546&amp;layout=standard&amp;show_faces=true&amp;width=450&amp;action=recommend&amp;colorscheme=light&amp;height=80" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:80px;" allowTransparency="true"></iframe>
 </div>-->
