--- a/static/css/frontpage_style.css
+++ b/static/css/frontpage_style.css
@@ -27,3 +27,9 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 		   margin-top: 40px;
                    text-align: center;
                 }
+                div#ripple-widget-sample {
+	            font-size: 25px;
+	            margin: auto;
+                    margin: 40px;
+	            text-align: center;
+                }
