Fixing up some minor things.

--- a/core/templates/campaign_admin.html
+++ b/core/templates/campaign_admin.html
@@ -19,16 +19,16 @@
 
 <ul>
 <li>
-Landing Page: &nbsp;&nbsp;&nbsp;&nbsp;<a target="landing" href="{{landing_url}}">{{landing_url}}</a><br/>
+Landing Page: &nbsp;&nbsp;&nbsp;&nbsp;<a target="campaign_admin" href="{{landing_url}}">{{landing_url}}</a><br/>
 </li>
 <li>
-Analytics: &nbsp;&nbsp;&nbsp;&nbsp;<a target="analytics" href="{{analytics_url}}">{{analytics_url}}</a><br/>
+Analytics: &nbsp;&nbsp;&nbsp;&nbsp;<a target="campaign_admin" href="{{analytics_url}}">{{analytics_url}}</a><br/>
 </li>
 <li>
-Edit: &nbsp;&nbsp;&nbsp;&nbsp;<a target="edit" href="{{update_url}}">{{update_url}}</a><br/>
+Edit: &nbsp;&nbsp;&nbsp;&nbsp;<a target="campaign_admin" href="{{update_url}}">{{update_url}}</a><br/>
 </li>
 <li>
-Embeddable Widget : &nbsp;&nbsp;&nbsp;&nbsp;<a target="launch" href="{{widget_url}}">{{widget_url}}</a><br/>
+Embeddable Widget : &nbsp;&nbsp;&nbsp;&nbsp;<a target="campaign_admin" href="{{widget_url}}">{{widget_url}}</a><br/>
 </li>
 </ul>
 </div>
