--- a/core/templates/campaign_created.html
+++ b/core/templates/campaign_created.html
@@ -14,11 +14,11 @@
 <h4 style="text-align:center;">Promotion Type - {{campaign.campaign_type}}</h4>
 
 <ul>
-<li>Landing Page: &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{landing_url}}" target="landing">{{landing_url}}</a><br/></li>
-<li>Analytics: &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{analytics_url}}" target="analytics">{{analytics_url}}</a><br/></li>
-<li>Edit: &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{update_url}}" target="update">{{update_url}}</a><br/></li>
-<li>Admin: &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{admin_url}}" target="admin">{{admin_url}}</a><br/></li>
-<li>Embeddable Widget: &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{widget_url}}" target="widget">{{widget_url}}</a><br/></li>
+<li>Landing Page: &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{landing_url}}" target="campaign_admin">{{landing_url}}</a><br/></li>
+<li>Analytics: &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{analytics_url}}" target="campaign_admin">{{analytics_url}}</a><br/></li>
+<li>Edit: &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{update_url}}" target="campaign_admin">{{update_url}}</a><br/></li>
+<li>Admin: &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{admin_url}}" >{{admin_url}}</a><br/></li>
+<li>Embeddable Widget: &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{widget_url}}" target="campaign_admin">{{widget_url}}</a><br/></li>
 <ul>
 
 </div>
