Removing preview page.

--- a/core/templates/create_campaign.html
+++ b/core/templates/create_campaign.html
@@ -137,7 +137,7 @@ $('#raffle-selection').cycle({
   
      //$("#campaign_url").keyup(handle_url_key);
      //$("#campaign_url").keydown(handle_url_key);
-     $("#campaign_url").keyup(function() {handle_url_key($(this).val())});
+     //$("#campaign_url").keyup(function() {handle_url_key($(this).val())});
 
 function handle_url_key(url){
                 var values = {};
