Fixing IE problems.

--- a/core/templates/campaign_widget.html
+++ b/core/templates/campaign_widget.html
@@ -34,7 +34,7 @@
 
 <div id="widget-preview">
    <div id="ripple-embed">{{campaign.id}}</div>
-   <script type="text/javascript" src="http://www.ripplefunction.com/site_media/javascript/embed-iframe.js"></script> 
+   <script type="text/javascript" src="http://www.ripplefunction.com/site_media/javascript/embed-iframe.js"></script>
 </div>
 
 <div id="widget-features">
@@ -88,6 +88,7 @@
 
 
 <script>
+
   $("#getcode").text("<Get Embeddable Code>");
   
  
@@ -98,7 +99,7 @@ $("#getcode").click(function(){
     
     $("#dialog").dialog({
         "width": 450,
-        "height": 200,
+        "height": 200
      });
     
 });
