--- a/core/templates/campaign_page2.html
+++ b/core/templates/campaign_page2.html
@@ -146,10 +146,10 @@
 		<div id="code-msg">Thanks for sharing.<BR> Here is your discount code:</div>
 		<div id="code">
 		    <p id="discount-code">{{campaign.code}}</p>
-		    <div id="d_clip_container" style="position:relative">
+		    <!--<div id="d_clip_container" style="position:relative">
 		        <button type="button" id="d_clip_button">Copy to Clipboard</button>
-		    </div>
-		    <span>Redeem Here:</span><a href="{{campaign.url_redeem}}">{{campaign.url_redeem}}</a></font></div>
+		    </div>-->
+		    <span>Redeem Here:</span><br/><a href="{{campaign.url_redeem}}">{{campaign.url_redeem}}</a></font></div>
 		{% else %}
                 <div id="code-msg">Thanks for sharing.<BR> You have entered raffle:</div>
                 <img style="margin: 20px;" id="img-prize" src="{{campaign.url_redeem}}" />
