Adding a new line.

--- a/core/templates/campaign_page2.html
+++ b/core/templates/campaign_page2.html
@@ -149,7 +149,7 @@
 		    <!--<div id="d_clip_container" style="position:relative">
 		        <button type="button" id="d_clip_button">Copy to Clipboard</button>
 		    </div>-->
-		    <span>Redeem Here:</span><br/><a href="{{campaign.url_redeem}}">{{campaign.url_redeem}}</a></font></div>
+		    <br/><span>Redeem Here:</span><br/><a href="{{campaign.url_redeem}}">{{campaign.url_redeem}}</a></font></div>
 		{% else %}
                 <div id="code-msg">Thanks for sharing.<BR> You have entered raffle:</div>
                 <img style="margin: 20px;" id="img-prize" src="{{campaign.url_redeem}}" />
