--- a/static/css/frontpage_style.css
+++ b/static/css/frontpage_style.css
@@ -1,35 +1,48 @@
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,font,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content-front:'';content-front:none}:focus{outline:0}ins{text-decoration:none}del{text-decoration:line-through}table{border-collapse:collapse;border-spacing:0}
-		html { 
-			background-color: #fff;
-		}
+html { 
+	background-color: #fff;
+}
 		
-		body { 
-			font-family: Aller, Arial, sans-serif; 
-			font-size: 13px; 
-			line-height: 18px; 
-			color: #000; 
-		}
+body { 
+	#font-family: Aller, Arial, sans-serif; 
+	font-size: 13px; 
+	line-height: 18px; 
+	color: #000; 
+        font-family:Constantina,Georgia,'Nimbus Roman No9 L',serif;
+}
 
-		#container #content-front { 
- 			margin: auto;
-			padding: 18px 20px; 
-			width: 545px;
-			background: #ddd; 
-			border-radius: 5px; 
-			-moz-border-radius: 5px;
-			-webkit-border-radius: 5px; 
-			-moz-box-shadow:0 0 60px 0px #000; 
-    		-webkit-box-shadow: 0 0 60px 0px #000;
-			text-align: center; 
-		}
+#frontpage-header {
+    margin: 10px; 
+    text-align:center; 
+    font-size: 30px; 
+    color: #922020; 
+}
+
+#container #content-front { 
+	margin: auto;
+	padding: 18px 20px; 
+	width: 545px;
+	background: #ddd; 
+	border-radius: 5px; 
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px; 
+	-moz-box-shadow:0 0 60px 0px #000; 
+	-webkit-box-shadow: 0 0 60px 0px #000;
+	text-align: center; 
+}
 		
-		#social-plugin {
-		   margin-top: 40px;
-                   text-align: center;
-                }
-                div#ripple-widget-sample {
-	            font-size: 25px;
-	            margin: auto;
-                    margin: 40px;
-	            text-align: center;
-                }
+#social-plugin {
+        margin-top: 40px;
+        text-align: center;
+}
+
+div#ripple-widget-sample {
+           font-size: 25px;
+           margin: auto;
+           margin: 40px;
+	   padding: 20px;
+           text-align: center;
+	   border: 1px solid black;
+	   color: #922020;
+	   background-color: #272932;
+}
