Adding some styling to front page.

--- a/core/templates/howitworks.html
+++ b/core/templates/howitworks.html
@@ -10,6 +10,7 @@
 
 
 {% block site-content %}
+<div id="howitworks-wrapper">
 <div class="description">
 <h1>Convert Event Attendees into Evangelists </h1>
 <p>
@@ -39,5 +40,6 @@ Top influencers. Top reach. Who clicked. Who is going. And much more.
 
 
 
+</div>
 </div>
 {% endblock %}
