--- a/frontpage/templates/frontpage.html
+++ b/frontpage/templates/frontpage.html
@@ -8,7 +8,10 @@
 
 {% block site-content %}
 <br/><br/>
-<h2 id="frontpage-header">RippleFunction Converts Event Attendees Into Evangelists <br /><br /><br />...So That Your Events Sell Out <a href="{% url howitworks %}">Learn More</a></h2>
+<div id="frontpage-header-div">
+Convert Event Attendees Into Evangelists <br /><br /><br />...So That Your Events Sell Out <a href="{% url howitworks %}">Learn More</a>
+</div>
+
 <br/><br/><br/><br/><br/>
 <div id="content-front">
 <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="545" height="383" id="viddler_251a4028"><param name="movie" value="http://www.viddler.com/player/251a4028/" /><param name="allowScriptAccess" value="always" /><param name="allowFullScreen" value="true" /><embed src="http://www.viddler.com/player/251a4028/" width="545" height="383" type="application/x-shockwave-flash" allowScriptAccess="always" allowFullScreen="true" name="viddler_251a4028"></embed></object>
