\Adding soem more fixes.

--- a/core/templates/howitworks.html
+++ b/core/templates/howitworks.html
@@ -15,8 +15,7 @@
 <h1>Convert Event Attendees into Evangelists </h1>
 <p>
 RippleFunction Creates, Manages, and Tracks event promotions by<br/>
-Rewarding Tweets and Shares with <br />
-Discounts, Raffle entries, VIP status at events, and other incentives.
+Rewarding Tweets and Shares with incentives.
 <img src="{%url static 'images/rewards.png'%}" />
 </p>
 
