--- a/static/css/howitworks.css
+++ b/static/css/howitworks.css
@@ -18,6 +18,7 @@
 
    margin-top: 20px;
    background-color: white;
+        font-family:Constantina,Georgia,'Nimbus Roman No9 L',serif;
 }
 
 
@@ -28,7 +29,7 @@
 }
 
 .description h1 {
-	     color: red;
+	     color: #3C8AAE;
 	     margin-bottom: 10%;
 }
 
