Fixing up soem things.

--- a/core/templates/howitworks.html
+++ b/core/templates/howitworks.html
@@ -12,7 +12,7 @@
 {% block site-content %}
 <div id="howitworks-wrapper">
 <div class="description">
-<h1>Convert Event Attendees into Evangelists </h1>
+<h1>Convert Event Attendees into Evangelists <br/>(How It Works)</h1>
 <p>
 RippleFunction Creates, Manages, and Tracks event promotions by<br/>
 Rewarding Tweets and Shares with incentives.
