--- a/core/templates/campaign_admin2.html
+++ b/core/templates/campaign_admin2.html
@@ -5,6 +5,7 @@
  	<link rel="stylesheet" href="{% url static 'css/create.css' %}" type="text/css" />
         <script type="text/javascript" src="{% url static 'javascript/jquery.showLoading.js' %}" ></script>	
         <link rel="stylesheet" href="{% url static 'css/showLoading.css' %}" type="text/css" />	
+        <link rel="stylesheet" href="{% url static 'css/campaign_admin_tabs.css' %}" type="text/css" />	
 	{% endblock %}
 
 {% block title %}Admin Console.{% endblock %}
@@ -13,28 +14,31 @@
 {% block site-content %}
 <br/><br/><br/>
 
-<div id="admin_console" class="create">
+<div id="admin_console2">
 <h1>Admin Console</h1>
 <h4 style="text-align:center;">Promotion Type - {{campaign.campaign_type}}</h4>
+<br/><br/><br/>
 
-<ul>
-<li>
-Landing Page: &nbsp;&nbsp;&nbsp;&nbsp;<a target="campaign_admin" href="{{landing_url}}">{{landing_url}}</a><br/>
-</li>
-<li>
-Analytics: &nbsp;&nbsp;&nbsp;&nbsp;<a target="campaign_admin" href="{{analytics_url}}">{{analytics_url}}</a><br/>
-</li>
-<li>
-Edit: &nbsp;&nbsp;&nbsp;&nbsp;<a target="campaign_admin" href="{{update_url}}">{{update_url}}</a><br/>
-</li>
-<li>
-Embeddable Widget : &nbsp;&nbsp;&nbsp;&nbsp;<a target="campaign_admin" href="{{widget_url}}">{{widget_url}}</a><br/>
-</li>
+<ul class="tabs">
+  <li><a href="#first">Landing Page</a></li>
+  <li><a href="#second">Edit</a></li>
+  <li><a href="#third">Widget</a></li>
+  <li><a href="#third">Analytics</a></li>
 </ul>
+
+<!-- tab "panes" -->
+<div class="panes">
+  <div><iframe src ="{{landing_url}}" width="100%" height="800"></iframe></div>
+
+  <div><iframe src ="{{update_url}}" width="100%" height="800"></iframe></div>
+  <div><iframe src ="{{widget_url}}" width="100%" height="800"></iframe></div>
+  <div><iframe src ="{{analytics_url}}" width="100%" height="800"></iframe></div>
+</div>
 </div>
 
-<div id="email-admin-details" class="create">
 
+
+<div id="email-admin-details" class="create">
 <input type="text" id="email_address" value="name@sampledomain.com"/>
 <button id="email-button">
 Email Details To Self
@@ -62,6 +66,9 @@ Email Details To Self
 </div>
 
 <script>
+$("ul.tabs").tabs("div.panes > div");
+
+
 // show pick winners if raffle
 if ('{{campaign.campaign_type}}' == 'raffle') {
     $("#winners").show();
