--- a/static/css/campaign_admin.css
+++ b/static/css/campaign_admin.css
@@ -1,8 +1,11 @@
+h1 {
+   text-align: center;
+}
+
 div#admin_console {
     padding: 20px;			  
     text-align: left;
     width: 90%;
-    #background-color: #CCCCFF;
     margin: auto;
 
     -moz-border-radius-topleft: 20px;
@@ -15,14 +18,34 @@ div#admin_console {
     -moz-border-radius-bottomright: 20px;
     -webkit-border-bottom-right-radius: 20px;
     margin-bottom: 30px;
-    margin-top: 100px;
+    margin-top: 60px;
 }
 
 div#admin_console li{
 		 list-style: none;
-		 
 }
 
+div#admin_console2 {
+    
+    text-align: left;
+    width: 140%;
+    margin: auto;
+    margin-left: -20%;
+
+    -moz-border-radius-topleft: 20px;
+    -webkit-border-top-left-radius: 20px;
+    -moz-border-radius-topright: 20px;
+    -webkit-border-top-right-radius: 20px;
+
+    -moz-border-radius-bottomleft: 20px;
+    -webkit-border-bottom-left-radius: 20px;
+    -moz-border-radius-bottomright: 20px;
+    -webkit-border-bottom-right-radius: 20px;
+    margin-bottom: 30px;
+    margin-top: 0px;
+}
+
+/* Raffle Select Winners */
 div#winners button {
     height:40px; 
     width: 160px; 
